resources/css/style.css
html{
  font-family: Helvetica;
  font-size: 16px;
  /*margin: 0;
  padding: 0;*/
}

body{
  /*margin: 0;*/
  /*overflow: scroll;;*/
  background-color: dimgray;
  width: 100%;
}

.container{
  margin: 0;
}

h1{
  font-size: 2.5rem;
  font-weight: 800;
  color: dimgray;
}

h3{
  font-size: 1.25rem;
  font-weight: bold;
  color: dimgray;
}

/*Header*/
.header{
  height: 64px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  z-index: 5;
  background-color: white;
  margin: 0 auto;
}

.small-header{
  display: none;
}

@media only screen and (max-width: 480px) {
  .small-header{
    height: 64px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    z-index: 5;
    background-color: white;
  }
  .header{
    display: none;
  }
}

.logo-box{
  display: flex;
  align-items: center;
}

#dark{
  color: gray;
}

#light{
  color: lightgray;
}

.header ul{
  display: flex;
}

ul li{
  padding: 16px;
  list-style: none;
}

ul li:hover{
  background-color: lightgray;
}

/*Banner*/
#banner{
  display: flex;
  justify-content: space-between;
  width: 100%;
  background-color: lightgray;
  align-items: center;
  margin: 0 auto;
}

#banner img{
  width: 100%;
  height: 100%;
  padding: 24px 32px;
}

.learn-pic{
  width: 60%;
}

.learn-box{
  color: dimgray;
  margin-left: 40px;
  /*width: 40%;*/
  width: 350px;
  padding-right: 150px;
  padding-left: 24px;
  /*max-width: 350px;*/
}

.learn-box > h1,
.learn-box > h4,
.learn-box > span{
  padding: 16px 0;
}

#banner span{
  display: block;
  background-color: gray;
  color: white;
  text-align: center;
  padding: 8px 0;
}

@media only screen and (max-width: 480px){
  #banner{
    margin-top: 180px;
    /*max-width: 480px;*/
  }
  .learn-box{
    width: 100%;
    padding: 0;
    margin: 0;
  }

  .learn-box h1,
  .learn-box h4,
  .learn-box span{
    padding: 16px 12px;
  }

  #banner span{
    padding: 16px 12px;
  }

  .learn-pic{
    display: none;
  }

}

/*Practice Box*/
#practice{
  width: 100%;
  display: flex;
  justify-content: space-between;
  background-color: white;
  margin: 0 auto;
}

/*#practice .container{
  display: flex;
}*/

.practice-hurt{
  display: flex;
  flex-direction: column;
  width: 60%;
  color: gray;
  padding: 32px 24px;
  justify-content: space-between;
}

.practice-hurt img, video{
  /*height: 100%;*/
  width: 100%;
  padding: 32px 0 32px 0;
}

.practice-hurt h2,
.practice-hurt span{
  margin: 0;
  padding: 0 0 24px 0;
}

.practice-hurt h2{
  font-weight: 800;
  font-size: 2rem;
  color: dimgray;
}

/*Right Column*/
.practice-our{
  display: flex;
  flex-direction: column;
  width: 423px;
  border-left: 1px solid lightgray;
}

.practice-feature{
  display: flex;
  color: gray;
  width: 100%;
  padding: 16px 0;
  justify-content: space-between;
  border-bottom: 1px solid lightgray;
}

.practice-feature:hover{
  background-color: lightgray;
}

.feature-image{
  /*width: 35%;*/
  height: 150px;
  width: 150px;
}

.feature-image img{
  width: 100%;
}

.feature-text{
  width: 65%;
  padding-left: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.feature-text h3,
.feature-text h4,
.feature-text span{
  padding: 4px 0;
}

.feature-text span{
  color: blue;
  padding: 4px 0;
}

@media only screen and (max-width: 480px){
  .practice-hurt{
    display: none;
  }
  .practice-feature{
    flex-direction: column;
    align-items: center;
    padding: 0;
  }
  .feature-text{
    width: 100%;
    align-items: center;
    padding: 0;
  }
  .feature-image{
    /*width: 100%;*/
    padding: 2rem 0 2rem 0;
  }
  .feature-image img{
    height: 150px;
    width: 150px;
  }
}

/*Learning*/
#learning{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: lightgray;
  width: 100%;
  margin: 0 auto;
}

#learning-mobile{
  display: none;
}

#learning h1{
  color: dimgray;
  align: center;
  margin: 0;
  padding: 0 0 32px 0;
}

.learning-row{
  width: 100%;
  display: flex;
  justify-content: space-between;
  padding: 10px 0;
}

.major{
  display: flex;
  flex-direction: column;
  width: 30%;
  color: gray;
  padding: 32px 24px;
  background-color: white;
  padding: 0 0 15px 0;
}

.major h3,
.major span{
  padding: 6px 24px;
}

.major img{
  width: 100%;
  padding-bottom: 12px;
}

@media only screen and (max-width: 480px){
  #learning{
    display: none;
  }

  #learning-mobile{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    background-color: white;
  }

  #learning-mobile h1{
    margin-bottom: 2rem;
    text-align: center;
  }

  #learning-mobile span{
    background-color: lightgray;
    padding: 16px;
    text-align: center;
    margin-bottom: 8px;
    color: dimgray;
    font-weight: bold;
  }

}

#thesis{
  display: flex;
  justify-content: space-between;
  background-color: white;
  width: 100%;
}
#thesis-mobile{
  display: none;
}

@media only screen and (max-width: 480px){
  #thesis{
    display: none;
  }
  #thesis-mobile{
    display: flex;
    flex-direction: column;
    width: 100%;
    background-color: white;
  }
  #thesis-mobile h1{
    text-align: center;
  }
}

footer{
  width: 100%;
  height: 64px;
  border-top: 1px solid lightgray;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: white;
  margin: 0 auto;
}

@media only screen and (max-width: 480px){
  .terms{
    display: none;
  }
}

